@@ -13,9 +13,8 @@ main (int argc, char **argv)
       fprintf (stderr, "Please give the name of a file to process.\n");
       exit (1);
     }
-  input_push_file (argv[1]);
   init_index_commands ();
-  root = parse_texi_file ();
+  root = parse_texi_file (argv[1]);
   dump_tree_to_perl (root);
 
   exit (0);
